--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p><label>Weight in KG : </label><input type="text" id="weight"></p>
 
     <button >Calculate</button>
-    <div id="result"></div>
+    <div id="results"></div>
 
     
     <div id="weight-guide">
